# GravoMG-Visualisation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gravomg/: CMakeLists.txt
gravomg/include/gravomg/: multigrid_solver.h
gravomg/src/: multigrid_solver.cpp
learnopengl/: camera.h  shader.h
nativefiledialog-extended/src/: CMakeLists.txt
nativefiledialog-extended/test/: CMakeLists.txt
shaders/: fragment_shader.glsl  vertex_shader.glsl  vertex_shader_sampling.glsl
